--- a/allSpice/Dockerfile
+++ b/allSpice/Dockerfile
@@ -13,4 +13,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/sdk:6.0
 WORKDIR /app
 COPY --from=build-env /app/out .
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet allSpice.dll
+CMD ASPNETCORE_URLS=http://*:$3306 dotnet allSpice.dll
